--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="row" id="viewblock">
         <div class="img_div">
-            <img class="img-responsive" src="images/pizza.png">
+            <img class="img-responsive" src="pizza.png">
         </div>
     </div>
     <div class="menu_div">
@@ -42,7 +42,7 @@
         <div id="display_addmenu"></div>
     </div>
     <div>
-        <img class="img-responsive" src="images/topping.png">
+        <img class="img-responsive" src="topping.png">
     </div>
 
 </body>
